--- a/client/src/App/base.scss
+++ b/client/src/App/base.scss
@@ -1,6 +1,13 @@
 .App {
-  text-align: center;
   font-family: 'Tagesschrift', system-ui;
   font-weight: 400;
   font-style: normal;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
 }
