--- a/client/src/components/Navbar/Menu.module.scss
+++ b/client/src/components/Navbar/Menu.module.scss
@@ -1,4 +1,5 @@
 .navbar {
+  margin: 10px 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -18,6 +19,19 @@
       }
       &:hover {
         transform: scale(1.15);
+      }
+    }
+  }
+  .btn {
+    &:hover {
+      transform: scale(1.15);
+    }
+    Button {
+      border: 0;
+      background-color: white;
+      cursor: pointer;
+      :active {
+        font-weight: bold ;
       }
     }
   }
