Добавил переход в на главную страницу при создании поста. Сделал функционал кнопки отменить. Так же написал потенциальные строки (пока что закомментированные для отображения картинки при создании поста

--- a/client/src/pages/AddPostPage/AddPostPage.module.scss
+++ b/client/src/pages/AddPostPage/AddPostPage.module.scss
@@ -72,6 +72,10 @@
         height: 20px;
         padding: 2px 4px;
       }
+      // .postImg img {
+      //   width: 300px;
+      //   height: 300px;
+      // }
       .redPinning {
         position: absolute;
         width: 42px;
