--- a/client/src/pages/PostPage/PostPage.module.scss
+++ b/client/src/pages/PostPage/PostPage.module.scss
@@ -11,20 +11,37 @@
     // border: 3px solid black;
     background-color: #fff;
     border-radius: 15px;
-
-    .btnBack {
+    .functions {
       margin: 25px 0 10px 0;
-      font-size: 20px;
-      a {
-        text-decoration: none;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .btnBack {
+        font-size: 20px;
+        a {
+          text-decoration: none;
+        }
+        button {
+          background-color: transparent;
+          border: none;
+          cursor: pointer;
+          display: flex;
+          align-items: center;
+          gap: 3px;
+        }
       }
-      button {
-        background-color: transparent;
-        border: none;
-        cursor: pointer;
+      .edit {
+        font-size: 28px;
         display: flex;
-        align-items: center;
-        gap: 3px;
+        justify-content: right;
+        gap: 20px;
+
+        .editBtn {
+          cursor: pointer;
+        }
+        .deleteBtn {
+          cursor: pointer;
+        }
       }
     }
 
@@ -62,7 +79,7 @@
     .aboutPost {
       display: flex;
       align-items: center;
-      margin: 15px 4px;
+      margin: 25px 4px;
 
       .score {
         width: 60%;
