--- a/client/src/pages/PostPage/PostPage.module.scss
+++ b/client/src/pages/PostPage/PostPage.module.scss
@@ -107,5 +107,24 @@
         }
       }
     }
+    .comments {
+      margin-bottom: 20px;
+      h2 {
+        margin-bottom: 15px;
+      }
+      form {
+        display: flex;
+        align-items: center;
+        gap: 10px;
+        input {
+          width: 300px;
+          height: 25px;
+        }
+        .sendComment {
+          cursor: pointer;
+          font-size: 26px;
+        }
+      }
+    }
   }
 }
