--- a/client/src/pages/LoginPage/LoginPage.module.scss
+++ b/client/src/pages/LoginPage/LoginPage.module.scss
@@ -1,88 +1,175 @@
 .loginPage {
   background-image: url('../../assets/img/sky-login.jpg');
-  height: 90.8vh;
+  height: 100vh;
   background-size: cover;
   background-repeat: no-repeat;
 }
+
 .autorization {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 450px;
+  min-height: 450px;
+  padding: 20px;
+  box-sizing: border-box;
+  min-height: 100vh;
+}
+
+.sectionAutorization {
+  background-color: #fff;
+  max-width: 600px;
+  width: 100%;
+  padding: 10px;
+  display: flex;
+  -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  -moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+  box-sizing: border-box;
+}
+
+.left {
+  width: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-image: url('../../assets/img/autorization-dark.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+}
+
+.description {
+  width: 70%;
+  color: #f1f1e4;
+  box-sizing: border-box;
+}
+
+.description p {
+  font-size: 14px;
+  box-sizing: border-box;
+}
+
+.description h3 {
+  margin-bottom: 10px;
+  font-size: 20px;
+  box-sizing: border-box;
+}
+
+.right {
+  width: 350px;
+  display: flex;
+  justify-content: center;
+  box-sizing: border-box;
+}
+
+.form {
+  width: 230px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  box-sizing: border-box;
+}
+
+.form input {
+  margin: 7px 0;
+  padding: 6px 4px;
+  border: none;
+  border: 1px solid rgb(160, 149, 149);
+  border-radius: 5px;
+  box-sizing: border-box;
+}
+
+.form h2 {
+  text-align: center;
+  margin-bottom: 10px;
+  box-sizing: border-box;
+}
+
+.form .btn {
+  cursor: pointer;
+  background-color: rgb(36, 227, 227);
+  padding: 5px 5px;
+  border: 1px solid rgb(48, 197, 197);
+  border-radius: 10px;
+  box-sizing: border-box;
+}
+
+.form .btn:hover {
+  background-color: rgb(15, 236, 236);
+  box-sizing: border-box;
+}
+
+.form .not_account {
+  text-align: center;
+  box-sizing: border-box;
+}
+
+.form a {
+  text-decoration: none;
+  color: rgb(29, 155, 187);
+  box-sizing: border-box;
+}
+
+@media (max-width: 670px) {
+  .loginPage {
+    background-image: url('../../assets/img/sky-login.jpg');
+    height: auto;
+    min-height: 100vh;
+    background-size: cover;
+    background-repeat: no-repeat;
+    box-sizing: border-box;
+  }
+
+  .autorization {
+    flex-direction: column;
+    align-items: center;
+    min-height: auto;
+    padding: 20px;
+    box-sizing: border-box;
+    min-height: 100vh;
+  }
 
   .sectionAutorization {
-    // font-family: 'Material Symbols Rounded';
-    // font-style: normal;
-    // font-weight: 400;
     background-color: #fff;
-    width: 600px;
-    height: 280px;
+    max-width: 350px;
+    width: 100%;
     padding: 10px;
     display: flex;
-    -webkit-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
-    -moz-box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
+    flex-direction: column;
+    align-items: center;
     box-shadow: 4px 4px 8px 0px rgba(34, 60, 80, 0.2);
-    .left {
-      width: 250px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      background-image: url('../../assets/img/autorization-dark.jpg');
-      background-size: cover;
-      background-repeat: no-repeat;
-      .description {
-        width: 70%;
-        color: #f1f1e4;
-        p {
-          font-size: 14px;
-        }
-        h3 {
-          margin-bottom: 10px;
-          font-size: 20px;
-        }
-      }
-    }
+    box-sizing: border-box;
+    min-height: auto;
+  }
 
-    .right {
-      width: 350px;
-      display: flex;
-      justify-content: center;
-      .form {
-        width: 230px;
-        display: flex;
-        flex-direction: column;
-        justify-content: center;
-        input {
-          margin: 7px 0;
-          padding: 6px 4px;
-          border: none;
-          border: 1px solid rgb(160, 149, 149);
-          border-radius: 5px;
-        }
-        h2 {
-          text-align: center;
-          margin-bottom: 10px;
-        }
-        .btn {
-          cursor: pointer;
-          background-color: rgb(36, 227, 227);
-          padding: 5px 5px;
-          border: 1px solid rgb(48, 197, 197);
-          border-radius: 10px;
+  .left {
+    width: 100%;
+    max-width: 350px;
+    height: 220px;
+    box-sizing: border-box;
+    margin-bottom: 20px;
+  }
 
-          &:hover {
-            background-color: rgb(15, 236, 236);
-          }
-        }
-        .not_account {
-          text-align: center;
-        }
-        a {
-          text-decoration: none;
-          color: rgb(29, 155, 187);
-        }
-      }
-    }
+  .right {
+    width: 100%;
+    max-width: 350px;
+    box-sizing: border-box;
+  }
+
+  .form {
+    width: 100%;
+    max-width: 350px;
+    box-sizing: border-box;
+  }
+
+  .form input {
+    width: 100%;
+    box-sizing: border-box;
+  }
+
+  .description p {
+    font-size: 16px;
+    box-sizing: border-box;
   }
 }
