--- a/client/src/pages/MainPage/MainPage.module.scss
+++ b/client/src/pages/MainPage/MainPage.module.scss
@@ -1,5 +1,5 @@
 .header {
-  height: 90.8vh;
+  min-height: 90.8vh;
   background-image: url('../../assets/img/mountains-dark.jpg');
   background-size: cover;
   background-repeat: no-repeat;
@@ -14,16 +14,17 @@
       right: 145px;
       top: 125px;
     }
-    .main__title {
-      font-size: 35px;
-    }
+    .text {
+      .main__title {
+        font-size: 35px;
+      }
 
-    .sub__title {
-      font-size: 20px;
-      margin-top: 45px;
-      width: 45%;
-      letter-spacing: 3px;
-
+      .sub__title {
+        font-size: 20px;
+        margin-top: 45px;
+        width: 45%;
+        letter-spacing: 3px;
+      }
       span {
         display: inline-block;
         margin-bottom: 3px;
@@ -131,6 +132,297 @@
               border: 0;
               background-color: #ff586f;
               cursor: pointer;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media (max-width: 800px) {
+  .header {
+    min-height: 90.8vh;
+    background-image: url('../../assets/img/mountains-dark.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    .mainHeader {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 90%;
+      .stiker {
+        position: static;
+      }
+      .text {
+        .main__title {
+          font-size: 35px;
+        }
+
+        .sub__title {
+          font-size: 20px;
+          width: 100%;
+          letter-spacing: 3px;
+        }
+        span {
+          display: inline-block;
+          margin-bottom: 3px;
+          background-color: rgb(156, 156, 14);
+        }
+      }
+    }
+  }
+
+  .main {
+    background-color: #f2eded;
+    .posts {
+      display: flex;
+      flex-direction: column-reverse;
+      justify-content: center;
+      align-items: center;
+      width: 100%;
+      .allPosts {
+        width: 100%;
+        min-height: 300px;
+        display: flex;
+        justify-content: center;
+
+        .wallpaper {
+          margin: 0;
+          padding: 10px 0;
+          margin-left: 0px;
+          // background-color: #e7f0a2;
+          // background-color: #f2eded;
+          background-color: #fff;
+          border-radius: 10px;
+          width: 72%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          flex-direction: column;
+        }
+      }
+      .popularPosts {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        margin: 30px 0;
+        .popular {
+          background-color: #fff;
+          width: 335px;
+          height: 250px;
+          border-radius: 10px;
+          position: static; // Добавляем sticky-позиционирование
+          top: 20px; // Отступ сверху при залипании
+          margin-right: 0px; // Отступ от правого края
+          .kubok {
+            display: flex;
+            justify-content: center;
+            img {
+              width: 100px;
+              margin: 0 auto;
+            }
+          }
+          .topList ol {
+            width: 200px;
+            li {
+              margin-bottom: 6px;
+            }
+          }
+        }
+        .search {
+          background-color: #fff;
+          width: 335px;
+          height: 150px;
+          margin-top: 30px;
+          margin-right: 00px; // Отступ от правого края
+          border-radius: 10px;
+          position: sticky; // Добавляем sticky-позиционирование
+          top: 400px; // Отступ сверху при залипании
+
+          display: flex;
+          justify-content: center;
+
+          form {
+            margin-top: 35px;
+            display: flex;
+            flex-direction: column;
+            gap: 10px;
+
+            .filter {
+              display: flex;
+              gap: 5px;
+              align-items: center;
+              input {
+                width: 210px;
+                height: 20px;
+                padding: 2px 4px;
+              }
+              .btn {
+                padding: 3.5px 4px;
+                border-radius: 3px;
+                cursor: pointer;
+                background-color: #8de8f3;
+                border: 0;
+              }
+            }
+            .reset {
+              margin-top: 10px;
+              .btn {
+                padding: 3.5px 4px;
+                border-radius: 3px;
+                border: 0;
+                background-color: #ff586f;
+                cursor: pointer;
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+}
+@media (max-width: 440px) {
+  .header {
+    min-height: 90.8vh;
+    background-image: url('../../assets/img/mountains-dark.jpg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    .mainHeader {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      width: 100%;
+      margin-right: 70px;
+
+      .stiker {
+        position: static;
+        img {
+          width: 220px;
+          height: 230px;
+        }
+      }
+      .text {
+        text-align: center;
+        .main__title {
+          font-size: 22px;
+        }
+
+        .sub__title {
+          font-size: 13px;
+          width: 100%;
+          letter-spacing: 3px;
+        }
+        span {
+          display: inline-block;
+          margin-bottom: 3px;
+          background-color: rgb(156, 156, 14);
+        }
+      }
+    }
+  }
+}
+@media (max-width: 360px) {
+  .header {
+    min-height: 100vh;
+    background-position: center;
+
+    .mainHeader {
+      padding: 30px 15px 0;
+      margin-right: 0;
+
+      .stiker {
+        img {
+          width: 200px;
+          height: 210px;
+          margin-top: 15px;
+        }
+      }
+
+      .text {
+        .main__title {
+          font-size: 20px;
+          margin-bottom: 10px;
+        }
+
+        .sub__title {
+          font-size: 12px;
+          margin-top: 20px;
+          letter-spacing: 1px;
+          line-height: 1.4;
+        }
+      }
+    }
+  }
+
+  .main {
+    .posts {
+      .allPosts {
+        .wallpaper {
+          width: 90%;
+          padding: 15px 0;
+
+          // Если внутри есть элементы, добавьте адаптацию для них
+        }
+      }
+
+      .popularPosts {
+        .popular {
+          width: 90%;
+          height: auto;
+          padding: 15px 0;
+
+          .kubok img {
+            width: 80px;
+          }
+
+          .topList ol {
+            width: 90%;
+            margin: 0 auto;
+            padding-left: 20px;
+
+            li {
+              margin-bottom: 8px;
+            }
+          }
+        }
+
+        .search {
+          width: 90%;
+          height: auto;
+          padding: 15px 0;
+          position: static;
+          margin-top: 20px;
+
+          form {
+            margin-top: 15px;
+            width: 90%;
+
+            .filter {
+              flex-direction: column;
+              align-items: center;
+
+              input {
+                width: 100%;
+                height: 25px;
+                margin-bottom: 8px;
+              }
+
+              .btn {
+                padding: 5px 10px;
+                width: 100%;
+              }
+            }
+
+            .reset .btn {
+              padding: 5px 10px;
+              width: 100%;
             }
           }
         }
